--- a/src/pages/assets/less/index.less
+++ b/src/pages/assets/less/index.less
@@ -1,7 +1,17 @@
 .index_container {
   width: 100%;
-  border: 1px solid red;
   > img {
     width: 200px;
+  }
+  > h1 {
+    font-size: 30px;
+    color: #fff;
+  }
+  .ignore-p {
+    width: 200px;
+    height: 100px;
+    color: #fff;
+    font-family: Sora;
+    font-size: 14px;
   }
 }
