--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -2,3 +2,10 @@
   padding: 30px;
   background-color: #999;
 }
+.details_container {
+  .ignore-p {
+    text-align: center;
+    color: #fff;
+    font-size: 30px;
+  }
+}
